...
            ? 'customer-sheet-selected-payment-option'
            : 'customer-sheet-edit-payment-methods'
        }
        title={
          selectedPaymentOption
            ? selectedPaymentOption.label
            : 'Edit payment methods'
        }
        onPress={() => {
          present();
        }}
      />
      {useComponent && customerAdapter && (
...
        />
      )}
      <SelectedPaymentOption paymentOption={selectedPaymentOption} />
      <View style={styles.switchRow}>
        <Text style={styles.switchLabel}>Use component: </Text>
        <Switch
          testID="customer_adapter_switch"
          onValueChange={(v) => {
            if (!v) {
              setup();
            } else {
              setCustomerAdapter(new ExampleCustomerAdapter(customer));
            }
...
