...
    },
    [navigation]
  );

  return (
    <ScrollView accessibilityLabel="app-root" style={styles.container}>
      <Collapse title="Accept a payment">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (single-step)"
              onPress={() => {
                navigation.navigate('PaymentsUICompleteScreen');
...
                );
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Checkout Sessions (private preview)"
              onPress={() => navigation.navigate('CheckoutPlaygroundScreen')}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (EmbeddedPaymentElement)"
              onPress={() => {
                navigation.navigate('EmbeddedPaymentElementScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
...
                navigation.navigate('LinkControllerScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Customer Sheet"
              onPress={() => {
                navigation.navigate('CustomerSheetScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="More payment scenarios">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Set up future payments"
              onPress={() => {
                navigation.navigate('SetupFuturePaymentScreen');
...
                navigation.navigate('CVCReCollectionScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Create tokens"
              onPress={() => {
                navigation.navigate('CreateTokenScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
...
                Alert.alert('WeChat Pay is not yet supported.');
              }}
            />
          </View>
        </>
      </Collapse>
      <Collapse title="Financial Connections">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Collect Bank Account"
              onPress={() => {
                navigation.navigate('CollectBankAccountScreen');
              }}
            />
          </View>
        </>
...
