...
      return;
    }
    setLoading(true);
    const { apiVersion, error, cardTokenId } = await presentPaymentPass({
      name: 'test',
      description: 'test',
      last4: '4242',
      brand: 'Visa',
      testMode: true,
    });

    if (error) {
      Alert.alert(`Error code: ${error.code}`, error.message);
...
