...

  return (
    <PaymentScreen onInit={initialize}>
      <View style={{ flexDirection: 'row', gap: 20, marginBottom: 10 }}>
        <Button
          variant="default"
          title="Open screen"
          onPress={() => {
            navigation.navigate('HomeScreen');
          }}
        />
        <Button
          variant="default"
          title="Open modal"
          onPress={() => {
            setModalVisible(true);
          }}
        />
      </View>
      <View
...
