appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Financial Connections"
- tapOn: "Collect Bank Account"
- assertVisible:
    text: "Collect token"
- tapOn:
    id: "force_native_flow_switch"
    optional: true
- tapOn:
    text: "Collect token"
    retryTapIfNoChange: false
- extendedWaitUntil:
    visible: "Agree and continue"
    timeout: 30000
- tapOn: "Agree and continue"
- extendedWaitUntil:
    visible: "Test (Non-OAuth)"
    timeout: 30000
- tapOn: "Test (Non-OAuth)"
- extendedWaitUntil:
    # wait for the auth flow to finish
    visible: "Select account"
    timeout: 60000
- assertVisible:
    text: "Connect account"
- tapOn: "Connect account"
- tapOn:
    # Hide the keyboard if it shows up
    id: "Return"
    optional: true
- assertVisible:
    text: "Finish without saving"
- tapOn: "Finish without saving"
- assertVisible:
    text: "Done"
- tapOn: "Done"
- assertVisible:
    text: "Success"
- tapOn:
    text: "OK"
    optional: true
