appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "More payment scenarios"
- tapOn: "Create tokens"
- assertVisible:
    text: "Create a PII token"
- inputText: "4242424242424242"
- inputText: "0145"
- inputText: "123"
- scrollUntilVisible:
    element:
      text: "Create a token from a card"
    direction: DOWN
- tapOn:
    text: "Create a token from a card"
- assertVisible:
    text: "Success"
- tapOn: "OK"
- tapOn: "Create a PII token"
- assertVisible:
    text: "Success"
- tapOn: "OK"
- tapOn: "Create a token from a bank account"
- assertVisible:
    text: "Success"
- tapOn: "OK"
